[package]
authors = ["The Rust Project Developers"]
description = "Integer traits and functions"
documentation = "https://docs.rs/num-integer"
homepage = "https://github.com/rust-num/num-integer"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "science", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-num/num-integer"
name = "num-integer"
version = "0.1.45"
readme = "README.md"
exclude = ["/bors.toml", "/ci/*", "/.github/*"]
edition = "2018"
rust-version = "1.31"

[package.metadata.docs.rs]
features = ["std"]

[dependencies.num-traits]
git = "https://github.com/scrtlabs/num-traits"
rev = "1c3d9893d2f9dcdf872626d4e723dc88bdc03575"
default-features = false
features = ["i128"]

[features]
default = ["std"]
std = ["num-traits/std"]
# vestigial features, now always in effect
i128 = []
